fix container spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .Main-container {
-  max-height: calc(100vh - 70px);
+  max-height: calc(100vh - 82px);
   overflow: scroll;
 }
