--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -1,5 +1,5 @@
 .Home {
-  height: calc(100vh - 75px);
+  height: calc(100vh - 82px);
   background-color: rgb(54, 54, 54);
 }
 
