--- a/src/containers/Navbar.css
+++ b/src/containers/Navbar.css
@@ -1,7 +1,7 @@
 .Navbar {
   display: flex;
   justify-content: space-between;
-  height: 45px;
+  height: 52px;
 }
 
 .Navbar .logo {
